config: default arg mandatory

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [beodict]
-win_title = "ASHCards beodict"
+win_title = ASHCards beodict
+
 win_width       = 1250
 win_height      =  350
 win_xpos        = 1300
