better color and config.ini

--- a/config.ini
+++ b/config.ini
@@ -8,9 +8,18 @@ win_ypos        =  420
 win_width_min   =  600
 win_height_min  =  150
 
+
+[default]
+headline_font   = "Times New Roman"
+text_font       = "Times New Roman"
 entry_font      = "Courier"
 button_font     = "Arial"
-text_font       = "Times New Roman"
-entry_font_size = 18
-button_font_size = 18
-text_font_size  = 16
+
+headline_font_size = 24
+text_font_size     = 16
+entry_font_size    = 18
+button_font_size   = 18
+
+label_bg  = yellow
+text_bg   = yellow
+button_bg = yellow
